err/sake.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sake'...
Compiling './lib/python3.5/site-packages/sake/const.py'...
***   File "./lib/python3.5/site-packages/sake/const.py", line 11
    ROLE_ANY                = 0x0000000000000000L  # No authentication required. Any session role will do (even zero).
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/dbghelp.py'...
***   File "./lib/python3.5/site-packages/sake/dbghelp.py", line 56
    self.log.error("\t%s", `t`)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/login.py'...
***   File "./lib/python3.5/site-packages/sake/login.py", line 49
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/logutil.py'...
***   File "./lib/python3.5/site-packages/sake/logutil.py", line 79
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/loop.py'...
***   File "./lib/python3.5/site-packages/sake/loop.py", line 328
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/network.py'...
***   File "./lib/python3.5/site-packages/sake/network.py", line 163
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/process.py'...
***   File "./lib/python3.5/site-packages/sake/process.py", line 65
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/telnetServer.py'...
***   File "./lib/python3.5/site-packages/sake/telnetServer.py", line 25
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sake/traceback2.py'...
***   File "./lib/python3.5/site-packages/sake/traceback2.py", line 131
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sake-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stacklesslib'...
Listing './lib/python3.5/site-packages/stacklesslib/replacements'...
Listing './lib/python3.5/site-packages/stacklesslib/test'...
Listing './lib/python3.5/site-packages/stacklesslib-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
